<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SNAP WIFI</string>
    <!-- activity_custom_dialog.xml -->
    <string name="recog_result">Recognition results</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <!-- cam.xml -->
    <string name="start_scan">Start Scan</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <!-- MainActivity.java -->
    <string name="set_permission"><![CDATA[The permission is denied, so you cannot use the app… \n\nPlease allow permission!\n[Setting] > [Permission]]]></string>
    <!-- Load.java -->
    <string name="on_wifi">Run the WIFI automatically</string>
    <string name="on_wifi_ing">WIFI is already in use.</string>
    <string name="close">End</string>
    <string name="back_first">Go first</string>
    <string name="back_onemore_close">If you press Back once more, the app will be closed.</string>
    <string name="wifi_connect_success">WIFI connection successful!</string>
    <string name="wifi_connect_fial">WIFI connection failed…</string>
    <string name="wifi_connect_error">It may be a problem with the WIFI connection you are trying to use.</string>
    <string name="wifi_setting">WIFI settings</string>
    <string name="scanning_wifi">Scanning WIFI…</string>
    <!-- Cam.java -->
    <string name="onGPS">Turn on the GPS to need execution!</string>
    <string name="setting">Setting</string>
    <!-- OnBoarding.java -->
    <string name="onboard_start_scan">Start scanning</string>
    <string name="ex_start_scan">Press this button to start and stop scanning. Scanning starts automatically when the app is launched.</string>
    <string name="onboard_scan_area">Scan area</string>
    <string name="ex_scan_area">Include the WIFI password in the rectangular area. It is automatically scanned.</string>
    <string name="onboard_zoom_in_out">Camera zoom in/out</string>
    <string name="ex_zoom_in_out">You can enlarge and reduce the camera screen.</string>
    <string name="onboard_scan_result">Password scan result</string>
    <string name="ex_scan_result">The WIFI password is scanned here. You can also edit your password.</string>
    <string name="onboard_start_connect">Start connection</string>
    <string name="ex_start_connect">Press the "OK" button to start the Wi-Fi auto connection.</string>
    <string name="onboard_reload_ex">Review description</string>
    <string name="ex_reload_ex">Press the button to see the description again.</string>
    <string name="onboard_not_reload_ex">No description</string>
    <string name="ex_not_reload_ex">If checked, the description window will not appear from next.</string>
    <!-- onboarding_layout.xml -->
    <string name="edit_text">Password</string>
</resources>