<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dialog_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <FrameLayout
            android:id="@+id/warning_frame"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginTop="10dp"
            android:visibility="visible">
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/warning_circle" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="center"
                android:src="@drawable/warning_sign" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/recog_result"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content">
            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel_btn"
            style="@style/dialog_blue_button"
            android:layout_margin="10dp"
            android:background="@drawable/cancel_btn"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/ok_btn"
            style="@style/dialog_blue_button"
            android:layout_margin="10dp"
            android:text="@string/ok"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>