<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="#000000"
    android:orientation="vertical">

    <com.kakao.adfit.ads.ba.BannerAdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="90dp"
        android:gravity="left"
        android:text=""
        android:textColor="#FFFF0000"/>

    <Button
        android:id="@+id/reload_onboarding"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/reload_onboarding"/>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/warningText"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:text=""
        android:textColor="#FFFF0000"/>

    <View
        android:id="@+id/rect"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="@drawable/draw_rect"
        android:visibility="gone"/>

    <com.uniquestudio.library.CircleCheckBox
        android:id="@+id/check_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBar1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="100dp"
        app:background_color="#86FF88"
        app:border_color="#06A300"
        android:visibility="gone"
        app:animation_duration="@android:integer/config_longAnimTime"/>

    <com.xw.repo.BubbleSeekBar
        android:id="@+id/seekBar1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:bsb_bubble_color="@color/color_red_light"
        app:bsb_bubble_text_color="@color/colorPrimaryDark"
        app:bsb_max="50.0"
        app:bsb_min="-50"
        app:bsb_progress="0"
        app:bsb_second_track_color="@color/color_red"
        app:bsb_section_count="5"
        app:bsb_section_text_position="bottom_sides"
        app:bsb_show_progress_in_float="true"
        app:bsb_show_section_mark="true"
        app:bsb_show_section_text="true"
        app:bsb_show_thumb_text="true"
        app:bsb_track_color="@color/color_red_light"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/startButton"
        android:layout_marginBottom="50dp"
        android:saveEnabled="false"/>
    <TextView
        android:id="@+id/low"
        android:layout_alignBottom="@+id/seekBar1"
        android:layout_toLeftOf="@+id/seekBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textColor="#ffffff"
        android:textSize="25dp"/>
    <TextView
        android:id="@+id/more"
        android:gravity="bottom"
        android:layout_alignBottom="@+id/seekBar1"
        android:layout_toRightOf="@+id/seekBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textColor="#ffffff"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="#19010000"
        android:text="@string/start_scan"
        android:textColor="#ffffff"
        android:textSize="15dp" />

    <LinearLayout
        android:id="@+id/scan_result_dialog"
        android:background="@drawable/dialog_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:visibility="gone"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <FrameLayout
                android:id="@+id/warning_frame"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginTop="10dp"
                android:visibility="visible">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/success_circle" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    android:src="@drawable/ic_success" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recog_result"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <EditText
                android:id="@+id/edit_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_text">
                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancel_btn"
                style="@style/dialog_blue_button"
                android:layout_margin="10dp"
                android:background="@drawable/cancel_btn"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/ok_btn"
                style="@style/dialog_blue_button"
                android:layout_margin="10dp"
                android:text="@string/ok"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>