<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical">

    <com.kakao.adfit.ads.ba.BannerAdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="90dp"
        android:gravity="left"
        android:text=""
        android:textColor="#FFFF0000"/>
    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/warningText"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:text=""
        android:textColor="#FFFF0000"/>

    <com.xw.repo.BubbleSeekBar
        android:id="@+id/seekBar1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:bsb_bubble_color="@color/color_red_light"
        app:bsb_bubble_text_color="@color/colorPrimaryDark"
        app:bsb_max="50.0"
        app:bsb_min="-50"
        app:bsb_progress="0"
        app:bsb_second_track_color="@color/color_red"
        app:bsb_section_count="5"
        app:bsb_section_text_position="bottom_sides"
        app:bsb_show_progress_in_float="true"
        app:bsb_show_section_mark="true"
        app:bsb_show_section_text="true"
        app:bsb_show_thumb_text="true"
        app:bsb_track_color="@color/color_red_light"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/startButton"
        android:layout_marginBottom="50dp"
        android:saveEnabled="false"/>
    <TextView
        android:id="@+id/low"
        android:layout_alignBottom="@+id/seekBar1"
        android:layout_toLeftOf="@+id/seekBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textColor="#ffffff"
        android:textSize="25dp"/>
    <TextView
        android:id="@+id/more"
        android:gravity="bottom"
        android:layout_alignBottom="@+id/seekBar1"
        android:layout_toRightOf="@+id/seekBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textColor="#ffffff"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="#19010000"
        android:onClick="onStartButtonClick"
        android:text="@string/start_scan"
        android:textColor="#ffffff"
        android:textSize="15dp" />
</RelativeLayout>
